footer problem on safari solved

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,7 @@ $highlight-color: #ad1457;
   display: -webkit-flex;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: auto;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -205,6 +205,7 @@ ul {
   background-position: center;
   background-repeat: no-repeat;
   filter: grayscale(50%);
+  height: 100%;
 }
 
 //MYWORK
